--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@react-native-community/eslint-plugin": "^1.0.0",
     "babel-jest": "^24.9.0",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.4",
+    "prettier": "1.19.1",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
