--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,20 +34,12 @@ target 'ReactNativeStarterApp' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
   target 'ReactNativeStarterAppTests' do
     inherit! :search_paths
     # Pods for testing
   end
 
   use_native_modules!
-end
-
-target 'ReactNativeStarterApp-tvOS' do
-  # Pods for ReactNativeStarterApp-tvOS
-
-  target 'ReactNativeStarterApp-tvOSTests' do
-    inherit! :search_paths
-    # Pods for testing
-  end
-
 end
