--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -27,6 +27,17 @@
         "test",
         "example"
       ]
+    },
+    {
+      "login": "panz3r",
+      "name": "Mattia Panzeri",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/1754457?v=4",
+      "profile": "http://panz3r.dev",
+      "contributions": [
+        "ideas",
+        "doc",
+        "tool"
+      ]
     }
   ],
   "contributorsPerLine": 7
