--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "assets:splashscreen": "rn-toolbox splash"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.7.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-splash-screen": "^3.2.0"
+    "react-native-splash-screen": "^3.2.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
@@ -31,7 +35,8 @@
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.4",
     "prettier": "1.19.1",
-    "react-test-renderer": "16.9.0"
+    "react-test-renderer": "16.9.0",
+    "redux-devtools-extension": "^2.13.8"
   },
   "jest": {
     "preset": "react-native"
