--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-splash-screen": "^3.2.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
