--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.1",
+    "immer": "^5.3.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-splash-screen": "^3.2.0",
