--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.1",
+    "immer": "^5.3.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-splash-screen": "^3.2.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "reselect": "^4.0.0"
   },
   "devDependencies": {
