--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.1",
+    "i18next": "^19.0.3",
     "immer": "^5.3.2",
     "react": "16.9.0",
+    "react-i18next": "^11.3.1",
     "react-native": "0.61.5",
     "react-native-splash-screen": "^3.2.0",
     "react-redux": "^7.1.3",
