--- a/package.json
+++ b/package.json
@@ -14,12 +14,19 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.1",
+    "@react-native-community/masked-view": "^0.1.6",
     "i18next": "^19.0.3",
     "immer": "^5.3.2",
     "react": "16.9.0",
     "react-i18next": "^11.3.1",
     "react-native": "0.61.5",
+    "react-native-gesture-handler": "^1.5.3",
+    "react-native-reanimated": "^1.7.0",
+    "react-native-safe-area-context": "^0.6.2",
+    "react-native-screens": "^2.0.0-alpha.25",
     "react-native-splash-screen": "^3.2.0",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^2.0.15",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
