--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "scripts": {
     "postinstall": "yarn assets:icons && yarn assets:splashscreen && yarn rndebugger-open",
+    "android:clean": "cd android && ./gradlew cleanBuildCache && ./gradlew clean && cd ..",
     "android": "react-native run-android",
+    "ios:clean": "rm -rf ios/build",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ./src",
     "assets:icons": "rn-toolbox icons",
-    "assets:splashscreen": "rn-toolbox splash"
+    "assets:splashscreen": "rn-toolbox splash",
+    "set-stage": "shx echo \"export default 'stage';\"> active.env.js",
+    "set-dev": "shx echo \"export default 'dev';\"> active.env.js",
+    "set-prod": "shx echo \"export default 'prod';\"> active.env.js"
   },
   "dependencies": {
     "@eva-design/eva": "^1.3.2",
@@ -53,7 +58,8 @@
     "prettier": "1.19.1",
     "react-native-debugger-open": "^0.3.24",
     "react-test-renderer": "16.9.0",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "shx": "^0.3.2"
   },
   "jest": {
     "preset": "react-native"
