chore: Improve 'scripts' using 'npm-run-all' and switch 'postinstall' to 'prepare'

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "postinstall": "yarn assets:icons && yarn assets:splashscreen && yarn rndebugger-open",
+    "prepare": "run-p assets:* debugger:install",
     "android:clean": "cd android && ./gradlew cleanBuildCache && ./gradlew clean && cd ..",
     "android": "react-native run-android",
     "ios:clean": "rm -rf ios/build",
@@ -13,6 +13,7 @@
     "lint": "eslint ./src",
     "assets:icons": "rn-toolbox icons",
     "assets:splashscreen": "rn-toolbox splash",
+    "debugger:install": "yarn rndebugger-open",
     "env:stage": "node scripts/set-environment.js staging",
     "env:dev": "node scripts/set-environment.js development",
     "env:prod": "node scripts/set-environment.js production",
@@ -62,6 +63,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.4",
+    "npm-run-all": "^4.1.5",
     "prettier": "1.19.1",
     "react-native-debugger-open": "^0.3.24",
     "react-test-renderer": "16.9.0",
