Final ENV version, added component to print app version and build, added new scripts to build env file

--- a/app.json
+++ b/app.json
@@ -1,4 +1,15 @@
 {
   "name": "ReactNativeStarterApp",
-  "displayName": "ReactNativeStarterApp"
+  "displayName": "ReactNativeStarterApp",
+  "environments": {
+    "development": {
+      "API_URL": "http://dev.api.com"
+    },
+    "staging": {
+      "API_URL": "http://staging.api.com"
+    },
+    "production": {
+      "API_URL": "http://prod.api.com"
+    }
+  }
 }
