--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ReactNativeStarterApp",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "postinstall": "yarn assets:icons && yarn assets:splashscreen && yarn rndebugger-open",
@@ -13,9 +13,15 @@
     "lint": "eslint ./src",
     "assets:icons": "rn-toolbox icons",
     "assets:splashscreen": "rn-toolbox splash",
-    "set-stage": "shx echo \"export default 'stage';\"> active.env.js",
-    "set-dev": "shx echo \"export default 'dev';\"> active.env.js",
-    "set-prod": "shx echo \"export default 'prod';\"> active.env.js"
+    "env:stage": "node scripts/set-environment.js staging",
+    "env:dev": "node scripts/set-environment.js development",
+    "env:prod": "node scripts/set-environment.js production",
+    "android:dev": "yarn env:dev && yarn android",
+    "android:stage": "yarn env:stage && yarn android",
+    "android:prod": "yarn env:prod && yarn android",
+    "ios:dev": "yarn env:dev && yarn ios",
+    "ios:stage": "yarn env:stage && yarn ios",
+    "ios:prod": "yarn env:prod && yarn ios"
   },
   "dependencies": {
     "@eva-design/eva": "^1.3.2",
@@ -34,6 +40,7 @@
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^11.0.1",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-version-number": "^0.3.6",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.15",
     "react-redux": "^7.1.3",
