--- a/package.json
+++ b/package.json
@@ -4,25 +4,27 @@
   "private": true,
   "scripts": {
     "prepare": "run-p assets:* debugger:install",
-    "android:clean": "cd android && ./gradlew cleanBuildCache && ./gradlew clean && cd ..",
-    "android": "react-native run-android",
-    "ios:clean": "rm -rf ios/build",
-    "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ./src",
+    "clean:android": "cd android && ./gradlew cleanBuildCache && ./gradlew clean && cd ..",
+    "clean:ios": "rm -rf ios/build",
+    "clean": "run-p clean:*",
     "assets:icons": "rn-toolbox icons",
     "assets:splashscreen": "rn-toolbox splash",
     "debugger:install": "yarn rndebugger-open",
     "env:stage": "node scripts/set-environment.js staging",
     "env:dev": "node scripts/set-environment.js development",
     "env:prod": "node scripts/set-environment.js production",
-    "android:dev": "yarn env:dev && yarn android",
-    "android:stage": "yarn env:stage && yarn android",
-    "android:prod": "yarn env:prod && yarn android",
-    "ios:dev": "yarn env:dev && yarn ios",
-    "ios:stage": "yarn env:stage && yarn ios",
-    "ios:prod": "yarn env:prod && yarn ios"
+    "setup:ios": "cd ios && pod install --repo-update && cd ..",
+    "_android": "react-native run-android",
+    "android:dev": "run-s env:dev _android",
+    "android:stage": "run-s env:stage _android",
+    "android:prod": "run-s env:prod _android",
+    "_ios": "react-native run-ios",
+    "ios:dev": "run-s env:dev _ios",
+    "ios:stage": "run-s env:stage _ios",
+    "ios:prod": "run-s env:prod _ios"
   },
   "dependencies": {
     "@eva-design/eva": "^1.3.2",
