--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReactNativeStarterApp",
+  "name": "react-native-starter-app",
   "version": "1.0.0",
   "private": true,
   "scripts": {
