--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-i18next": "^11.3.1",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.3",
+    "react-native-localize": "^1.3.2",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.25",
