Removed UIKitten, added NativeBase, replaced React-Navigation Header with Custom Header component, removed vector-icons using the one in NativeBase

--- a/ios/ReactNativeStarterApp/Info.plist
+++ b/ios/ReactNativeStarterApp/Info.plist
@@ -65,6 +65,9 @@
 		<string>Lato-Regular.ttf</string>
 		<string>Lato-Thin.ttf</string>
 		<string>Lato-ThinItalic.ttf</string>
+		<string>Roboto_medium.ttf</string>
+		<string>Roboto.ttf</string>
+		<string>rubicon-icon-font.ttf</string>
 		<string>AntDesign.ttf</string>
 		<string>Entypo.ttf</string>
 		<string>EvilIcons.ttf</string>
