--- a/package.json
+++ b/package.json
@@ -27,12 +27,11 @@
     "ios:prod": "run-s env:prod _ios"
   },
   "dependencies": {
-    "@eva-design/eva": "^1.3.2",
     "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/masked-view": "^0.1.6",
-    "@ui-kitten/components": "^4.3.2",
     "i18next": "^19.0.3",
     "immer": "^5.3.2",
+    "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-i18next": "^11.3.1",
     "react-native": "0.61.5",
@@ -42,7 +41,6 @@
     "react-native-screens": "^2.0.0-alpha.25",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^11.0.1",
-    "react-native-vector-icons": "^6.6.0",
     "react-native-version-number": "^0.3.6",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.15",
