--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "typescript": "^3.7.5"
   },
   "devDependencies": {
     "@babel/core": "7.8.3",
@@ -57,6 +58,11 @@
     "@panz3r/react-native-toolbox": "^1.2.0",
     "@react-native-community/eslint-config": "^0.0.6",
     "@react-native-community/eslint-plugin": "^1.0.0",
+    "@types/jest": "^25.1.1",
+    "@types/node": "^13.7.0",
+    "@types/react": "^16.9.19",
+    "@types/react-native": "^0.61.9",
+    "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "^24.9.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^6.8.0",
@@ -69,7 +75,12 @@
     "react-native-debugger-open": "^0.3.24",
     "react-test-renderer": "16.9.0",
     "redux-devtools-extension": "^2.13.8",
-    "shx": "^0.3.2"
+    "shx": "^0.3.2",
+    "ts-jest": "^25.1.0",
+    "tslint": "^6.0.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-eslint-rules": "^5.4.0",
+    "tslint-react": "^4.2.0"
   },
   "jest": {
     "preset": "react-native"
