--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@
       - tools
       - platform-tools
       - build-tools-28.0.3
+      - android-16
       - android-28
       - extra-google-m2repository
       - extra-google-google_play_services
