--- a/ios/Podfile
+++ b/ios/Podfile
@@ -43,3 +43,11 @@ target 'ReactNativeStarterApp' do
 
   use_native_modules!
 end
+
+post_install do |pi|
+    pi.pods_project.targets.each do |t|
+      t.build_configurations.each do |config|
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '10.0'
+      end
+    end
+end
