--- a/package.json
+++ b/package.json
@@ -33,23 +33,23 @@
     "build:dev:ios": "run-s env:dev setup:ios ios:assemble:debug"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.8.1",
-    "@react-native-community/masked-view": "^0.1.7",
-    "@react-navigation/native": "^5.1.3",
-    "@react-navigation/stack": "^5.1.1",
+    "@react-native-community/async-storage": "1.9.0",
+    "@react-native-community/masked-view": "0.1.9",
+    "@react-navigation/native": "5.1.5",
+    "@react-navigation/stack": "5.2.10",
     "@reduxjs/toolkit": "^1.3.4",
-    "i18next": "^19.3.4",
+    "i18next": "19.4.1",
     "native-base": "^2.13.12",
-    "react": "16.9.0",
+    "react": "16.13.1",
     "react-i18next": "^11.3.4",
-    "react-native": "0.61.5",
+    "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
-    "react-native-localize": "^1.3.4",
-    "react-native-reanimated": "^1.8.0",
+    "react-native-localize": "1.4.0",
+    "react-native-reanimated": "1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
     "react-native-splash-screen": "^3.2.0",
-    "react-native-svg": "^12.0.3",
+    "react-native-svg": "12.1.0",
     "react-native-version-number": "^0.3.6",
     "react-redux": "^7.2.0",
     "redux-persist": "^6.0.0",
@@ -63,21 +63,21 @@
     "@react-native-community/eslint-config": "^1.0.0",
     "@react-native-community/eslint-plugin": "^1.0.0",
     "@types/jest": "^25.2.1",
-    "@types/node": "^13.11.1",
-    "@types/react": "^16.9.34",
-    "@types/react-native": "^0.61.23",
+    "@types/node": "13.11.1",
+    "@types/react": "16.9.34",
+    "@types/react-native": "0.62.2",
     "@types/react-test-renderer": "^16.9.2",
-    "babel-jest": "^25.2.6",
+    "babel-jest": "25.3.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^25.2.4",
+    "eslint-plugin-prettier": "3.1.3",
+    "jest": "25.3.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "npm-run-all": "^4.1.5",
     "prettier": "2.0.4",
     "react-native-debugger-open": "^0.3.24",
-    "react-test-renderer": "16.13.0",
+    "react-test-renderer": "16.13.1",
     "remote-redux-devtools": "^0.5.16",
     "shx": "^0.3.2",
     "ts-jest": "^25.3.1",
