--- a/package.json
+++ b/package.json
@@ -67,9 +67,11 @@
     "@types/react": "16.9.34",
     "@types/react-native": "0.62.2",
     "@types/react-test-renderer": "^16.9.2",
+    "@typescript-eslint/eslint-plugin": "2.31.0",
+    "@typescript-eslint/parser": "2.31.0",
     "babel-jest": "25.5.1",
     "babel-plugin-module-resolver": "^4.0.0",
-    "eslint": "^6.8.0",
+    "eslint": "7.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "3.1.3",
     "jest": "25.4.0",
@@ -81,10 +83,7 @@
     "remote-redux-devtools": "^0.5.16",
     "shx": "^0.3.2",
     "ts-jest": "^25.4.0",
-    "tslint": "^6.1.2",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-eslint-rules": "^5.4.0",
-    "tslint-react": "^5.0.0"
+    "tslint": "^6.1.2"
   },
   "jest": {
     "preset": "react-native"
