--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "react-redux": "^7.2.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "typescript": "^3.9.7"
+    "typescript": "4.0.3"
   },
   "devDependencies": {
     "@babel/core": "7.11.6",
@@ -67,14 +67,14 @@
     "@types/react": "16.9.50",
     "@types/react-native": "0.63.22",
     "@types/react-test-renderer": "^16.9.3",
-    "@typescript-eslint/eslint-plugin": "2.31.0",
-    "@typescript-eslint/parser": "2.33.0",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
     "babel-jest": "26.3.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "3.1.4",
-    "jest": "25.5.4",
+    "jest": "26.4.2",
     "metro-react-native-babel-preset": "^0.63.0",
     "npm-run-all": "^4.1.5",
     "prettier": "2.1.2",
@@ -82,7 +82,7 @@
     "react-test-renderer": "16.13.1",
     "remote-redux-devtools": "^0.5.16",
     "shx": "^0.3.2",
-    "ts-jest": "^25.5.1",
+    "ts-jest": "26.4.1",
     "tslint": "^6.1.3"
   },
   "jest": {
