--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
   "name": "react-native-starter-app",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "private": true,
   "scripts": {
     "prepare": "run-p assets:* debugger:install",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ./src",
+    "lint:staged": "pretty-quick --staged && lint-staged",
     "clean:android": "cd android && ./gradlew cleanBuildCache && ./gradlew clean && cd ..",
     "clean:ios": "rm -rf ios/build",
     "clean": "run-p clean:*",
+    "assets": "npx react-native link",
     "assets:icons": "rn-toolbox icons",
     "assets:splashscreen": "rn-toolbox splash",
     "debugger:install": "yarn rndebugger-open",
-    "env:stage": "node scripts/set-environment.js staging",
     "env:dev": "node scripts/set-environment.js development",
+    "env:stage": "node scripts/set-environment.js staging",
     "env:prod": "node scripts/set-environment.js production",
     "setup:ios": "cd ios && pod install --repo-update && cd ..",
-    "_android": "react-native run-android",
+    "_android": "cd android && ./gradlew clean && cd .. && react-native run-android",
     "android:dev": "run-s env:dev _android",
     "android:stage": "run-s env:stage _android",
     "android:prod": "run-s env:prod _android",
@@ -32,16 +34,18 @@
     "build:dev:android": "run-s env:dev android:bundle:create android:assemble:debug",
     "build:dev:ios": "run-s env:dev setup:ios ios:assemble:debug",
     "dependencies:checkCircular": "madge src/ --circular",
-    "dependencies:graph": "madge src/ --circular --image deps-graph.svg"
+    "dependencies:graph": "madge src/ --circular --image deps-graph.svg",
+    "postinstall": "husky install"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.0.0",
     "@react-native-community/async-storage": "1.12.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "5.9.4",
     "@react-navigation/stack": "5.14.4",
     "@reduxjs/toolkit": "^1.5.1",
+    "@ui-kitten/components": "^5.0.0",
     "i18next": "20.1.0",
-    "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-i18next": "^11.8.12",
     "react-native": "0.63.4",
@@ -51,7 +55,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.0.0",
     "react-native-splash-screen": "^3.2.0",
-    "react-native-svg": "12.1.0",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-version-number": "^0.3.6",
     "react-redux": "^7.2.3",
@@ -79,20 +83,25 @@
     "eslint": "7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "3.3.1",
+    "husky": "6.0.0",
     "jest": "26.6.3",
+    "lint-staged": "10.5.4",
     "madge": "^4.0.2",
     "metro-react-native-babel-preset": "^0.65.2",
     "npm-run-all": "^4.1.5",
     "prettier": "2.2.1",
+    "pretty-quick": "^3.1.0",
     "react-native-debugger-open": "^0.3.25",
     "react-test-renderer": "16.13.1",
     "remote-redux-devtools": "^0.5.16",
     "shx": "^0.3.3",
-    "ts-jest": "26.5.4",
-    "tslint": "^6.1.3"
+    "ts-jest": "26.5.4"
   },
   "jest": {
     "preset": "react-native"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "eslint --cache --fix"
   },
   "madge": {
     "tsConfig": "./tsconfig.json",
