--- a/ios/Podfile
+++ b/ios/Podfile
@@ -22,9 +22,18 @@ target 'ReactNativeStarterApp' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!
+  # use_flipper!
+  # To fix Flipper problem after upgrade to XCode 12.5
+  use_flipper!({ 'Flipper-Folly' => '2.5.3', 'Flipper' => '0.87.0', 'Flipper-RSocket' => '1.3.1' })
   post_install do |installer|
     flipper_post_install(installer)
+
+    # To fix Facebook cocoapods 'sharedApplication' is unavailable: not available on iOS (App Extension)
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['APPLICATION_EXTENSION_API_ONLY'] = 'No'
+      end
+    end
   end
 end
 
