--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,18 +4,18 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 platform :ios, '10.0'
 
 # fixes for last Mac updates
-def find_and_replace(dir, findstr, replacestr)
-  Dir[dir].each do |name|
-      text = File.read(name)
-      replace = text.gsub(findstr,replacestr)
-      if text != replace
-          puts "Fix: " + name
-          File.open(name, "w") { |file| file.puts replace }
-          STDOUT.flush
-      end
-  end
-  Dir[dir + '*/'].each(&method(:find_and_replace))
-end
+# def find_and_replace(dir, findstr, replacestr)
+#   Dir[dir].each do |name|
+#       text = File.read(name)
+#       replace = text.gsub(findstr,replacestr)
+#       if text != replace
+#           puts "Fix: " + name
+#           File.open(name, "w") { |file| file.puts replace }
+#           STDOUT.flush
+#       end
+#   end
+#   Dir[dir + '*/'].each(&method(:find_and_replace))
+# end
 
 target 'ReactNativeStarterApp' do
   config = use_native_modules!
@@ -40,7 +40,7 @@ target 'ReactNativeStarterApp' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!({ 'Flipper-Folly' => '2.5.3', 'Flipper' => '0.87.0', 'Flipper-RSocket' => '1.3.1' })
+  use_flipper!()
 
   post_install do |installer|
     react_native_post_install(installer)
@@ -54,17 +54,17 @@ target 'ReactNativeStarterApp' do
 
     # https://stackoverflow.com/a/67308343/10540870
     ## Fix for XCode 12.5 & RN 0.62.2 - See https://github.com/facebook/react-native/issues/28405
-    find_and_replace("../node_modules/react-native/React/CxxBridge/RCTCxxBridge.mm",
-      "_initializeModules:(NSArray<id<RCTBridgeModule>> *)modules", "_initializeModules:(NSArray<Class> *)modules")
+    # find_and_replace("../node_modules/react-native/React/CxxBridge/RCTCxxBridge.mm",
+    #   "_initializeModules:(NSArray<id<RCTBridgeModule>> *)modules", "_initializeModules:(NSArray<Class> *)modules")
 
-    find_and_replace("../node_modules/react-native/ReactCommon/turbomodule/core/platform/ios/RCTTurboModuleManager.mm",
-      "RCTBridgeModuleNameForClass(strongModule))", "RCTBridgeModuleNameForClass(Class(strongModule)))")
+    # find_and_replace("../node_modules/react-native/ReactCommon/turbomodule/core/platform/ios/RCTTurboModuleManager.mm",
+    #   "RCTBridgeModuleNameForClass(strongModule))", "RCTBridgeModuleNameForClass(Class(strongModule)))")
 
-    find_and_replace("Pods/Headers/Private/RCT-Folly/folly/synchronization/DistributedMutex-inl.h",
-      "atomic_notify_one(state)", "folly::atomic_notify_one(state)")
+    # find_and_replace("Pods/Headers/Private/RCT-Folly/folly/synchronization/DistributedMutex-inl.h",
+    #   "atomic_notify_one(state)", "folly::atomic_notify_one(state)")
 
-    find_and_replace("Pods/Flipper-Folly/folly/synchronization/DistributedMutex-inl.h",
-      "atomic_wait_until(&state, previous | data, deadline)", "folly::atomic_wait_until(&state, previous | data, deadline)")
+    # find_and_replace("Pods/Flipper-Folly/folly/synchronization/DistributedMutex-inl.h",
+    #   "atomic_wait_until(&state, previous | data, deadline)", "folly::atomic_wait_until(&state, previous | data, deadline)")
   end
 end
 
