--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@ui-kitten/components": "^5.1.0",
     "i18next": "20.3.1",
     "react": "17.0.2",
-    "react-i18next": "^11.10.0",
+    "react-i18next": "11.11.0",
     "react-native": "0.64.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-localize": "2.1.1",
@@ -61,30 +61,30 @@
     "react-redux": "^7.2.4",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "typescript": "4.3.2",
+    "typescript": "4.3.3",
     "with-query": "^1.3.0"
   },
   "devDependencies": {
-    "@babel/core": "7.14.5",
-    "@babel/runtime": "7.14.5",
+    "@babel/core": "7.14.6",
+    "@babel/runtime": "7.14.6",
     "@panz3r/react-native-toolbox": "^2.0.0",
-    "@react-native-community/eslint-config": "^2.0.0",
+    "@react-native-community/eslint-config": "3.0.0",
     "@react-native-community/eslint-plugin": "^1.1.0",
     "@types/jest": "^26.0.23",
-    "@types/react": "17.0.11",
     "@types/node": "15.12.2",
+    "@types/react": "17.0.11",
     "@types/react-native": "0.64.10",
     "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "4.26.1",
-    "@typescript-eslint/parser": "4.26.1",
+    "@typescript-eslint/eslint-plugin": "4.27.0",
+    "@typescript-eslint/parser": "4.27.0",
     "babel-jest": "27.0.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "3.4.0",
     "husky": "6.0.0",
-    "jest": "26.6.3",
+    "jest": "27.0.4",
     "lint-staged": "11.0.0",
     "madge": "^4.0.2",
     "metro-react-native-babel-preset": "^0.66.0",
@@ -95,7 +95,7 @@
     "react-test-renderer": "17.0.2",
     "remote-redux-devtools": "^0.5.16",
     "shx": "^0.3.3",
-    "ts-jest": "26.5.6"
+    "ts-jest": "27.0.3"
   },
   "jest": {
     "preset": "react-native"
