--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,20 +3,6 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '11.0'
 
-# fixes for last Mac updates
-# def find_and_replace(dir, findstr, replacestr)
-#   Dir[dir].each do |name|
-#       text = File.read(name)
-#       replace = text.gsub(findstr,replacestr)
-#       if text != replace
-#           puts "Fix: " + name
-#           File.open(name, "w") { |file| file.puts replace }
-#           STDOUT.flush
-#       end
-#   end
-#   Dir[dir + '*/'].each(&method(:find_and_replace))
-# end
-
 target 'ReactNativeStarterApp' do
   config = use_native_modules!
 
@@ -44,34 +30,6 @@ target 'ReactNativeStarterApp' do
 
   post_install do |installer|
     react_native_post_install(installer)
-
-    # To fix Facebook cocoapods 'sharedApplication' is unavailable: not available on iOS (App Extension)
-    # installer.pods_project.targets.each do |target|
-    #   target.build_configurations.each do |config|
-    #     config.build_settings['APPLICATION_EXTENSION_API_ONLY'] = 'No'
-    #   end
-    # end
-
-    # https://stackoverflow.com/a/67308343/10540870
-    ## Fix for XCode 12.5 & RN 0.62.2 - See https://github.com/facebook/react-native/issues/28405
-    # find_and_replace("../node_modules/react-native/React/CxxBridge/RCTCxxBridge.mm",
-    #   "_initializeModules:(NSArray<id<RCTBridgeModule>> *)modules", "_initializeModules:(NSArray<Class> *)modules")
-
-    # find_and_replace("../node_modules/react-native/ReactCommon/turbomodule/core/platform/ios/RCTTurboModuleManager.mm",
-    #   "RCTBridgeModuleNameForClass(strongModule))", "RCTBridgeModuleNameForClass(Class(strongModule)))")
-
-    # find_and_replace("Pods/Headers/Private/RCT-Folly/folly/synchronization/DistributedMutex-inl.h",
-    #   "atomic_notify_one(state)", "folly::atomic_notify_one(state)")
-
-    # find_and_replace("Pods/Flipper-Folly/folly/synchronization/DistributedMutex-inl.h",
-    #   "atomic_wait_until(&state, previous | data, deadline)", "folly::atomic_wait_until(&state, previous | data, deadline)")
+    __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 end
-
-# post_install do |pi|
-#     pi.pods_project.targets.each do |t|
-#       t.build_configurations.each do |config|
-#         config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
-#       end
-#     end
-# end
