--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-starter-app",
-  "version": "3.6.0",
+  "version": "3.7.0",
   "private": true,
   "scripts": {
     "prepare": "run-p assets:* debugger:install",
@@ -48,13 +48,13 @@
     "@react-navigation/stack": "6.1.1",
     "@reduxjs/toolkit": "^1.7.2",
     "@ui-kitten/components": "^5.1.1",
-    "i18next": "21.6.10",
+    "i18next": "21.6.11",
     "react": "17.0.2",
-    "react-i18next": "11.15.3",
-    "react-native": "0.66.4",
+    "react-i18next": "11.15.4",
+    "react-native": "0.67.2",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-localize": "2.1.9",
-    "react-native-reanimated": "2.4.0",
+    "react-native-reanimated": "2.4.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-splash-screen": "^3.3.0",
@@ -68,29 +68,30 @@
     "with-query": "^1.3.0"
   },
   "devDependencies": {
-    "@babel/core": "7.17.0",
-    "@babel/runtime": "7.17.0",
+    "@babel/core": "7.17.2",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/runtime": "7.17.2",
     "@panz3r/react-native-toolbox": "^2.1.0",
     "@react-native-community/eslint-config": "3.0.1",
     "@react-native-community/eslint-plugin": "^1.1.0",
     "@types/jest": "^27.4.0",
-    "@types/node": "17.0.15",
+    "@types/node": "17.0.17",
     "@types/react": "17.0.39",
     "@types/react-native": "0.66.15",
     "@types/react-redux": "^7.1.22",
     "@types/react-test-renderer": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "5.10.2",
-    "@typescript-eslint/parser": "5.10.2",
-    "babel-jest": "27.5.0",
+    "@typescript-eslint/eslint-plugin": "5.11.0",
+    "@typescript-eslint/parser": "5.11.0",
+    "babel-jest": "27.5.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "4.0.0",
     "husky": "7.0.4",
-    "jest": "27.5.0",
+    "jest": "27.5.1",
     "lint-staged": "12.3.3",
     "madge": "^5.0.1",
-    "metro-react-native-babel-preset": "^0.67.0",
+    "metro-react-native-babel-preset": "0.68.0",
     "npm-run-all": "^4.1.5",
     "prettier": "2.5.1",
     "pretty-quick": "^3.1.3",
