--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-starter-app",
-  "version": "3.7.0",
+  "version": "3.8.0",
   "private": true,
   "scripts": {
     "prepare": "run-p assets:* debugger:install",
@@ -51,7 +51,8 @@
     "i18next": "21.6.12",
     "react": "17.0.2",
     "react-i18next": "11.15.5",
-    "react-native": "0.67.2",
+    "react-native": "0.67.3",
+    "react-native-flipper": "^0.137.0",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-localize": "2.2.0",
     "react-native-reanimated": "2.4.1",
@@ -62,6 +63,7 @@
     "react-native-vector-icons": "^9.1.0",
     "react-native-version-number": "^0.3.6",
     "react-redux": "^7.2.6",
+    "redux-flipper": "^2.0.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "typescript": "4.5.5",
@@ -74,6 +76,7 @@
     "@panz3r/react-native-toolbox": "^2.1.0",
     "@react-native-community/eslint-config": "3.0.1",
     "@react-native-community/eslint-plugin": "^1.1.0",
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/jest": "^27.4.1",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
