--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
 
     /* Strict Type-Checking Options */
     "strict": true,                           /* Enable all strict type-checking options. */
-    // "noImplicitAny": true,                 /* Raise error on expressions and declarations with an implied 'any' type. */
+    "noImplicitAny": false,                   /* Raise error on expressions and declarations with an implied 'any' type. */
     // "strictNullChecks": true,              /* Enable strict null checks. */
     // "strictFunctionTypes": true,           /* Enable strict checking of function types. */
     // "strictPropertyInitialization": true,  /* Enable strict checking of property initialization in classes. */
@@ -90,9 +90,9 @@
       // "@utils/*": [
       //   "src/utils/*"
       // ],
-      // "@env": [
-      //   "src/env.js"
-      // ]
+      "@env": [
+        "src/env.js"
+      ]
     }
   },
   "exclude": [
