--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-starter-app",
-  "version": "4.0.0",
+  "version": "6.0.0",
   "private": true,
   "scripts": {
     "prepare": "run-p assets:* debugger:install",
@@ -41,20 +41,21 @@
     "postinstall": "husky install"
   },
   "dependencies": {
-    "@eva-design/eva": "^2.1.1",
     "@react-native-async-storage/async-storage": "1.17.7",
     "@react-native-masked-view/masked-view": "^0.2.6",
-    "@react-navigation/native": "6.0.10",
-    "@react-navigation/stack": "6.2.1",
+    "@react-navigation/native": "6.0.11",
+    "@react-navigation/stack": "6.2.2",
     "@reduxjs/toolkit": "^1.8.1",
-    "@ui-kitten/components": "^5.1.2",
-    "i18next": "21.8.10",
+    "axios": "^0.27.2",
+    "i18next": "21.8.13",
     "lodash": "^4.17.21",
-    "react": "18.0.0",
-    "react-i18next": "11.17.2",
-    "react-native": "0.69.0",
-    "react-native-flipper": "0.151.0",
+    "native-base": "^3.4.8",
+    "react": "18.2.0",
+    "react-i18next": "11.18.0",
+    "react-native": "0.69.1",
+    "react-native-flipper": "0.153.0",
     "react-native-gesture-handler": "2.5.0",
+    "react-native-indicators": "^0.17.0",
     "react-native-localize": "2.2.2",
     "react-native-reanimated": "^3.0.0-rc.0",
     "react-native-safe-area-context": "4.3.1",
@@ -67,31 +68,32 @@
     "redux-flipper": "^2.0.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "typescript": "4.7.4",
-    "with-query": "^1.3.0"
+    "typescript": "4.7.4"
   },
   "devDependencies": {
     "@babel/core": "7.18.5",
     "@babel/preset-env": "7.18.2",
     "@babel/runtime": "7.18.3",
-    "@panz3r/react-native-toolbox": "^3.0.0",
+    "@forward-software/react-native-toolbox": "^3.0.0",
     "@react-native-community/eslint-config": "3.0.3",
     "@react-native-community/eslint-plugin": "1.2.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
-    "@types/jest": "28.1.3",
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
-    "@types/react-native": "0.69.0",
+    "@types/jest": "28.1.4",
+    "@types/node": "18.0.3",
+    "@types/react": "18.0.15",
+    "@types/react-native": "0.69.2",
+    "@types/react-native-indicators": "^0.16.2",
+    "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-redux": "^7.1.23",
     "@types/react-test-renderer": "18.0.0",
-    "@typescript-eslint/eslint-plugin": "5.29.0",
-    "@typescript-eslint/parser": "5.29.0",
+    "@typescript-eslint/eslint-plugin": "5.30.5",
+    "@typescript-eslint/parser": "5.30.5",
     "babel-jest": "28.1.1",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "8.18.0",
+    "eslint": "8.19.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "8.0.1",
     "jest": "28.1.1",
     "lint-staged": "13.0.3",
