--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-starter-app",
-  "version": "6.0.0",
+  "version": "6.1.0",
   "private": true,
   "scripts": {
     "prepare": "run-p assets:* debugger:install",
@@ -41,34 +41,33 @@
     "postinstall": "husky install"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.17.7",
-    "@react-native-masked-view/masked-view": "^0.2.7",
+    "@react-native-async-storage/async-storage": "1.17.9",
+    "@react-native-masked-view/masked-view": "0.2.7",
     "@react-navigation/native": "6.0.11",
     "@react-navigation/stack": "6.2.2",
-    "@reduxjs/toolkit": "^1.8.1",
+    "@reduxjs/toolkit": "1.8.4",
     "axios": "^0.27.2",
-    "i18next": "21.8.13",
+    "i18next": "21.9.1",
     "lodash": "^4.17.21",
-    "native-base": "^3.4.8",
+    "native-base": "3.4.13",
     "react": "18.2.0",
-    "react-i18next": "11.18.0",
-    "react-native": "0.69.1",
-    "react-native-flipper": "0.153.0",
+    "react-i18next": "11.18.4",
+    "react-native": "0.69.4",
+    "react-native-flipper": "0.159.0",
     "react-native-gesture-handler": "2.5.0",
     "react-native-indicators": "^0.17.0",
-    "react-native-localize": "2.2.2",
+    "react-native-localize": "2.2.3",
     "react-native-reanimated": "^3.0.0-rc.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^12.3.0",
+    "react-native-svg": "13.0.0",
     "react-native-vector-icons": "^9.1.0",
     "react-native-version-number": "^0.3.6",
     "react-redux": "8.0.2",
     "redux-flipper": "^2.0.1",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.3",
-    "typescript": "4.7.4"
+    "redux-saga": "1.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.18.5",
@@ -77,11 +76,11 @@
     "@forward-software/react-native-toolbox": "^3.0.0",
     "@react-native-community/eslint-config": "3.0.3",
     "@react-native-community/eslint-plugin": "1.2.0",
-    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "@trivago/prettier-plugin-sort-imports": "3.3.0",
     "@types/jest": "28.1.4",
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
-    "@types/react-native": "0.69.2",
+    "@types/react-native": "0.69.5",
     "@types/react-native-indicators": "^0.16.2",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-redux": "^7.1.23",
@@ -106,7 +105,8 @@
     "react-test-renderer": "18.2.0",
     "remote-redux-devtools": "^0.5.16",
     "shx": "^0.3.4",
-    "ts-jest": "28.0.7"
+    "ts-jest": "28.0.7",
+    "typescript": "4.7.4"
   },
   "jest": {
     "preset": "react-native"
