feat: added tamagui configuration with custom theme, updated entire app UI, added modal example

--- a/ios/ReactNativeStarterApp/Info.plist
+++ b/ios/ReactNativeStarterApp/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>BootSplash.storyboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
