--- a/tsconfig.json
+++ b/tsconfig.json
@@ -62,6 +62,9 @@
       "@components/*": [
         "src/components/*"
       ],
+      "@constants/*": [
+        "src/constants/*"
+      ],
       "@hooks/*": [
         "src/hooks/*"
       ],
