--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.15",
     "@reduxjs/toolkit": "1.9.7",
+    "@tamagui/shorthands": "^1.75.7",
+    "@tamagui/themes": "^1.75.7",
     "axios": "^0.27.2",
     "i18next": "^22.5.0",
     "lodash": "^4.17.21",
-    "native-base": "3.4.28",
     "react": "18.2.0",
     "react-i18next": "^12.3.1",
     "react-native": "0.72.6",
@@ -56,16 +57,20 @@
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.14.0",
+    "react-native-toast-message": "^2.1.7",
     "react-native-vector-icons": "^10.0.0",
     "react-native-version-number": "^0.3.6",
     "react-redux": "8.1.3",
     "redux-persist": "^6.0.0",
-    "redux-saga": "1.2.3"
+    "redux-saga": "1.2.3",
+    "tamagui": "^1.75.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@commitlint/cli": "^18.4.2",
+    "@commitlint/config-conventional": "^18.4.2",
     "@forward-software/react-native-toolbox": "^3.0.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
